style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Pixelify+Sans:wght@400..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap'); 

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    cursor: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="28" height="54" viewBox="0 0 24 24"><path fill="%23FFF" stroke="%23000" stroke-width="1.75" d="M5.5 3.21V20.8c0 .45.54.67.85.35l4.86-4.86a.5.5 0 0 1 .35-.15h6.87a.5.5 0 0 0 .35-.85L6.35 2.85a.5.5 0 0 0-.85.35Z"></path></svg>')6 15, auto;

}

body {
     background-image: radial-gradient(
        circle, 
        rgba(0, 17, 37, 1) 0%,  
        rgba(0, 17, 37, 1) 25%,      
        rgba(0, 0, 0, 1) 100%       
    );
    background-size: cover;
    background-repeat: no-repeat;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: row;
    height: 100vh;
    overflow: hidden;
}

#GameScreen {
    position: relative;
    width: 100%;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
         background-image: radial-gradient(
        circle, 
        rgba(0, 17, 37, 1) 0%,  
        rgba(0, 17, 37, 1) 25%,      
        rgba(0, 0, 0, 1) 100%       
    )
}
#GameScreen:fullscreen {
    width: 100vw;
    height: 100vh;
    display: flex;
    flex-direction: column; /* if needed */
}

canvas {
    width: 100%; 
    height: auto; 
    max-width: 1200px;
    box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
}


#score {
    position: absolute;
    top: 20px;
    left: 20px;
    color: white;
    font-size: 1.5rem;
    font-family: Pixelify Sans, 'Courier New', Courier, monospace;
    color: lime;
}



.MainMenu {
    background: transparent;
    position: absolute;
    width: 100%;
    height: 100%;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    z-index: 3;
    padding: 20px;
    text-align: center;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 10px;
}

.menu button {
    margin: 0 10px;
    padding: 10px 20px;
    border: none;
    outline: none;
    background-color: #464646;
    color: #fff;
    z-index: 1;
}

#startBtn {
    background-image: url("img/start\ game.png");
    background-size: cover;
    background-position: center center;
    background-color: transparent;
    filter: brightness(70%);
    width: 181px;
    height: 61.2px;
    position: absolute;
    bottom: 40%;
    left: 50%;
    transform: translate(-50%, 50%);
}

#settingsBtn {
    background-image: url("img/Volume.png");
    background-size: cover;
    background-position: center center;
    background-color: transparent;
    filter: brightness(70%);
    width: 181px;
    height: 61.2px;
    position: absolute;
    bottom: calc(40% + 65px);
    left: 50%;
    transform: translate(-50%, 50%);
}


.settings-menu {
    width: 40%;
    height: 70%;
    color: #fff;
    display: flex;
    flex-direction: column;
    padding: 10px;
    border-radius: 5px;
    position: absolute;
    left: 50%;
    top: 50%;
    z-index: 2;
    font-family: "poppins", sans-serif;
    font-weight: 400;
    transform: translate(-50%, -50%);
    box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, .5);
    background: #151b2b;
    background: linear-gradient(to bottom right, #151b2b, #191f3c);
    overflow: hidden;
    overflow-y: auto;
}

.header-row {
    display: flex;
    align-items: center;
    gap: 10px;
    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
    padding: 10px 0 12px 10px;
    margin-bottom: 20px;
}
.settings-menu h2 {
    display: flex;
    justify-self: center;
    margin: 0;
    padding-left: 10px;
    font-size: 1.75rem;
    font-weight:normal;
    letter-spacing: 1px;
    color: #fff;
}
#backBtn {
    background-image: url("img/back_arrow.png");
    background-size: cover;
    background-position: center center;
    background-color: transparent;
    filter: brightness(70%);
    width: 80.8px;
    height: 50px;
    border: none;
}

.settingsMenuContent {
    display: flex;
    flex-direction: column;
    gap: 15px;
    width: 100%;
    padding: 20px;
}

.volume-setting {
    display: flex;
    align-items: center;
    justify-content: space-between;
    gap: 10px;
}

.volume-setting p {
    margin: 0;
    width: 35%;
    text-align: start;
    font-size: 1.5rem;
}

.volume-setting input[type="range"] {
    flex: 1;
    box-shadow: inset 0 0 5px rgba(0, 0, 0, .5),
                0 0 10px 2px rgba(0, 0, 0, .5);
    -webkit-appearance: none;
    background: #2c2f4a;
    border-radius: 5px;
    height: 16px;
    min-width: 100px;
}
.volume-setting input[type="range"]::-webkit-slider-thumb {
    -webkit-appearance: none;
    height: 16px;
    width: 16px;
    transform: rotate(45deg);
    background: #51eeff;
    box-shadow: 2px 2px 10px 5px rgba(0,0,0,.4);
    transition: transform 0.3s;
}
.volume-setting input[type="range"]:hover::-webkit-slider-thumb {
    background: #00eeff;
    transform: scale(.95);
}
.volume-setting input[type="range"]::-moz-range-thumb {
    -webkit-appearance: none;
    height: 16px;
    width: 16px;
    transform: rotate(45deg);
    margin-left: 2px;
    background: #51eeff;
    box-shadow: 2px 2px 10px 5px rgba(0,0,0,.4);
    transition: transform 0.3s;
}
.volume-setting input[type="range"]:hover::-moz-range-thumb {
    background: #00eeff;
    transform: scale(.95);
}
#MenuSlider-value {
    font-size: 1.2rem;
    width: 6%;
    text-align: right;
}

.MobileLayout {
    display: flex;
    align-items: center;
    flex-direction: row;
    width: 100%;
}
.MobileLayout p {
    margin-right: 10px;
    width: 35%;
    text-align: start;
    font-size: 1.5rem;
}
/* ... */

